[package]
name = "gcdx"
version = "0.2.3"
edition = "2021"
license = "MIT"
description = "Calculate the greatest common divisor of multiple values"
homepage = "https://github.com/rikonaka/gcdx-rs"
documentation = "https://docs.rs/gcdx"
repository = "https://github.com/rikonaka/gcdx-rs"
readme = "README.md"
keywords = ["gcd"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
